--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5,7 +5,7 @@ body {
 h1 {
   color: #fff;
   padding: 10px;
-  background: #660000;
+  background: #660000 url(../images/header-background.gif) top left;
   text-align: center;
 }
 a {
