--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -4,10 +4,10 @@ body {
 }
 h1 {
   color: #fff;
-  padding: 10px;
+  padding: 0.417em;
   background: #660000 url(../images/header-background.gif) top left;
   text-align: center;
-  font-size: 24px;
+  font-size: 1.5em;
   margin: 0;
 }
 h2, h3 {
@@ -19,7 +19,7 @@ a {
 a.buy-now {
   color: #fff;
   background: #006633;
-  padding: 5px;
+  padding: 0.313em;
   text-decoration: none;
 }
 .author {
@@ -34,7 +34,7 @@ p#copyright, p#copyright a {
 }
 div.image {
   float: left;
-  margin-right: 10px;
+  margin-right: 0.625em;
 }
 div.purchase {
   float: right;
